Reorganizacion del codigo y creacion de nuevas animacions

--- a/Ingenio.PortalWebExterno/Views/Home/Directorio.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Directorio.cshtml
@@ -21,7 +21,7 @@
 <!-- estilo contenido -->
 <style>
     .contenido {
-        background-image: url(/img/texture-bw.png);
+        background-image: url(/img/Img_Web2/background-credito.jpg);
         padding-top: 20px;
         padding-bottom: 50px;
         -webkit-box-shadow: 3px 6px 37px 4px rgba(0,0,0,0.75);
