--- a/Ingenio.PortalWebExterno/Content/sass/prueba.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/prueba.scss
@@ -1,4 +1,52 @@
-﻿section.section {
+﻿/* Variables*/
+$primary-color: rgba(224, 85, 20, 0.75);
+$secondary-color: rgba(236,28,36,255);
+$sombras-color: rgba(0,0,0,0.5);
+$unit: 6px;
+
+.textoTitulo {
+    transition: all 0.3s;
+}
+
+.textoTitulo:hover {
+    color: $secondary-color;
+    /*margin: 200px;*/
+    letter-spacing: -1.3px;
+}
+
+.underline2 {
+    /*color:red;*/
+    display: inline-block;
+    position: relative;
+}
+
+.underline2:after {
+    content: "";
+    position: absolute;
+    width: 20%;
+    height: 2px;
+    bottom: -20px;
+    left: 40%;
+    background: $secondary-color;
+    /*background:blue;*/
+    transform: scale(0);
+    transform-origin: bottom right;
+    transition: transform 0.2s ease-out;
+}
+
+.underline2:hover:after {
+    transform: scale(1);
+    transform-origin: bottom left;
+}
+
+
+
+
+
+
+
+
+section.section {
     background: transparent;
 }
 
@@ -17,11 +65,8 @@
 }
 
 
-$primary-color: rgba(224, 85, 20, 0.75);
-$secondary-color: red;
-$unit: 6px;
 
-@function size($value){
+@function size($value) {
     @return $value * $unit;
 }
 
@@ -46,25 +91,75 @@ $unit: 6px;
 .titulos > h3 {
     font-size: size(5);
 }
+
 @media screen and (max-width: 899px) {
     .content-video {
         @include obj-centrado();
         margin: 0;
     }
+
     .tarjetas-Centradas {
         @include obj-centrado();
         flex-direction: column;
         margin: 30px;
+        border: 1px solid red;
     }
 }
+
 @media (min-width: 900px) {
     .tarjetas-Centradas {
         @include obj-centrado();
         flex-direction: column;
         margin: 30px;
+        /*border: 1px solid $primary-color;*/
+        border-radius: 5%;
+        transition: all 0.2s;
+        /*background: red;*/
     }
+
+    .icons > .tarjetas-Centradas:hover, .icons > .tarjetas-Centradas:focus {
+        background: #fff;
+        /*box-shadow: 0px 15px 30px -20px rgb(0 0 0 / 5%), 0px 15px 35px 0px rgb(135 146 154 / 15%);*/
+        transform: translate3d(0,-10px,0);
+        /*border: 2px solid $secondary-color;*/
+        box-shadow: 0px 15px 30px -20px $sombras-color, 
+                    0px 15px 30px -20px $sombras-color, 
+                    0px 15px 30px -20px $sombras-color;
+        /*background: blue;*/
+    }
+
+}
+i {
+    transition: all 0.2s ease-in-out;
 }
 
+
+.animacion_arriba:hover > i, .animacion_arriba:focus > i {
+    /*background-color: blue;*/
+    animation: wobble_vertical 1s ease-in-out;
+    animation-iteration-count: 1;
+}
+@keyframes wobble_vertical{
+    0% {
+        transform: translateY(5px);
+    }
+
+    20% {
+        transform: translateY(-5px)
+    }
+
+    60% {
+        transform: translateY(2px)
+    }
+
+    80% {
+        transform: translateY(-2px)
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
 
 // Navigation Variables
 $content-width: 1000px;
