--- a/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
@@ -40,7 +40,6 @@
     <link rel="stylesheet" type="text/css" href="~/Content/slick/slick/slick-theme.css" />
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 
-
     <!-- estilo para imagen con parallax-->
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,500,700,800" rel="stylesheet" type="text/css">
     @Styles.Render("~/Content/css")
@@ -419,11 +418,11 @@
                         </li>
 
                         @*<li class="item item-app" style="background-color: #1F4F90">
-                        <a href="https://www.psepagos.co/PSEHostingUI/ShowTicketOffice.aspx?ID=2616#" target="_blank">
-                            <p>Realiza tus Pagos por <strong>PSE</strong></p>
-                            <i class="fa fa-credit-card-alt" aria-hidden="true"></i>
-                        </a>
-                    </li>*@
+                                <a href="https://www.psepagos.co/PSEHostingUI/ShowTicketOffice.aspx?ID=2616#" target="_blank">
+                                    <p>Realiza tus Pagos por <strong>PSE</strong></p>
+                                    <i class="fa fa-credit-card-alt" aria-hidden="true"></i>
+                                </a>
+                            </li>*@
 
                         <li class="item item-app" style="background-color: #E1852C">
                             <a href="/FormatosAC/Index">
@@ -471,33 +470,38 @@
                 <div class="content-video">
                     <h3>Bienvenido a Cofinal</h3>
                     <p>Somos una cooperativa de ahorro y crédito, orgullosamente <br /> Colombiana, cuyo motor son nuestros asociados ¡Aquí perteneces¡</p>
-                    <a id="actualiza">Actualiza tu información personal aqui</a>
+                    <a href="#" id="actualiza">Actualiza tu información personal aqui</a>
                 </div>
             </section>
             <!--Final fondo de Video -->
             <!-- Seccion: En que te podemos ayudar -->
             <section>
                 <div class="contenedor">
-                    <h3>¿En Que Te Podemos Ayudar?</h3>
+                    <h3 class="textoTitulo">¿En Que Te Podemos Ayudar?</h3>
                     <div class="botones">
+                        <button class="btn">Ahorro</button>
+                        <button class="btn">Crédito</button>
                         <button class="btn">Quiero ser socio</button>
-                        <button>Credito</button>
-                        <button>Ahorro</button>
+                        <button class="btn">Fondos sociales</button>
+                        <button class="btn">Servicios Virtuales</button>
                     </div>
                 </div>
             </section>
             <!-- Final: En que te podemos ayudar -->
             <!-- Seccion slider de imagenes -->
-            <div class="wrapper">
-                <div class="my-slider">
-                    <div><img class="imagen-slider" src="~/img/Img_Web2/1.jpg"></div>
-                    <div><img class="imagen-slider" src="~/img/Img_Web2/2.jpg"></div>
-                    <div><img class="imagen-slider" src="~/img/Img_Web2/3.jpg"></div>
-                    <div><img class="imagen-slider" src="~/img/Img_Web2/4.jpg"></div>
-                    <div><img class="imagen-slider" src="~/img/Img_Web2/5.jpg"></div>
-                    <div><img class="imagen-slider" src="~/img/Img_Web2/6.jpg"></div>
+            <div class="caroosles_de_imagenes">
+                <div class="wrapper">
+                    <div class="my-slider">
+                        <div><img class="imagen-slider" src="~/img/Img_Web2/1.jpg"></div>
+                        <div><img class="imagen-slider" src="~/img/Img_Web2/2.jpg"></div>
+                        <div><img class="imagen-slider" src="~/img/Img_Web2/3.jpg"></div>
+                        <div><img class="imagen-slider" src="~/img/Img_Web2/4.jpg"></div>
+                        <div><img class="imagen-slider" src="~/img/Img_Web2/5.jpg"></div>
+                        <div><img class="imagen-slider" src="~/img/Img_Web2/6.jpg"></div>
+                    </div>
                 </div>
             </div>
+
 
             <!-- Titulo grande de texto -->
             <section class="textoTitulo">
@@ -507,19 +511,22 @@
             <!-- Seccion de Iconos -->
             <section>
                 <div class="icons">
-                    <div class="tarjetas-Centradas">
+                    <div class="tarjetas-Centradas underline2">
                         <div class="icentrado">
                             <i class="fa-solid fa-user-tie"></i>
                         </div>
                         <p>Convenios y promociones</p>
+                        <p class="text-prueba"> Lorem Ipsum is simply dummy<br /> text of the printing and typesetting industry. </p>
                     </div>
                     <div class="tarjetas-Centradas">
                         <div class="icentrado"><i aria-hidden="true" class="fas fa-user-lock"></i></div>
                         <p>Protección al ahorro</p>
+                        <p class="text-prueba"> Lorem Ipsum is simply dummy<br /> text of the printing and typesetting industry. </p>
                     </div>
                     <div class="tarjetas-Centradas">
                         <div class="icentrado"><i aria-hidden="true" class="fas fa-user-plus"></i></div>
                         <p>Ayuda funeraria</p>
+                        <p class="text-prueba"> Lorem Ipsum is simply dummy<br /> text of the printing and typesetting industry. </p>
                     </div>
                 </div>
             </section>
@@ -545,12 +552,40 @@
                         </div>
 
                         <div class="modal-footer">
+                            <button>Agende su afiliación</button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div id="ventana1" class="modal-ventana">
+                <!-- Modal content -->
+                <div class="modal-contentenido">
+
+                    <div class="modal-contentenido-left">
+                        <img src="~/img/semilla1.png" alt="foto de prueba">
+                    </div><!-- end modal content left -->
+
+                    <div class="modal-contentenido-right">
+
+                        <div class="modal-header">
+                            <p>Credito</p>
+                            <span class="cerrar1">&times;</span>
+                        </div>
+
+                        <div class="modal-body">
+                            <p>El Asociado de COFINAL, es dueño de la Cooperativa.</p>
+                            <p>El Asociado de COFINAL tiene la posibilidad de acceder a todo el portafolio de productos y servicios ofrecidos y realizar operaciones propias de su objeto económico social.</p>
+                        </div>
+
+                        <div class="modal-footer">
                             <button>Agente su afiliación</button>
                         </div>
 
                     </div>
                 </div>
-            </div><!-- END the modal -->
+            </div>
+            <!-- END the modal -->
             <!-- END the modal -->
             <!-- Seccion de Fin -->
             <!-- Titulo grande de texto -->
@@ -560,21 +595,21 @@
             <!-- Fin: Titulo grande de texto -->
             <!-- Tarjetas Contenedoras -->
             <section class="tarjetas-contenedor">
-                <div class="tarjetas-Centradas pintar">
+                <div class="tarjetas-Centradas pintar animacion_arriba">
                     <i aria-hidden="true" class="far fa-clock"></i>
                     <h3>Ahorro</h3>
                     <p>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     </p>
                 </div>
-                <div class="tarjetas-Centradas pintar">
+                <div class="tarjetas-Centradas pintar animacion_arriba">
                     <i aria-hidden="true" class="fas fa-check"></i>
                     <h3>Crédito</h3>
                     <p>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     </p>
                 </div>
-                <div class="tarjetas-Centradas pintar">
+                <div class="tarjetas-Centradas pintar animacion_arriba">
                     <i aria-hidden="true" class="fas fa-calendar-alt"></i>
                     <h3>Simuladores</h3>
                     <p>
@@ -582,7 +617,7 @@
 
                     </p>
                 </div>
-                <div class="tarjetas-Centradas pintar">
+                <div class="tarjetas-Centradas pintar animacion_arriba">
                     <i aria-hidden="true" class="fas fa-calendar-alt"></i>
                     <h3>Virtual</h3>
                     <p>
@@ -606,13 +641,12 @@
                         <input type="text" id="lname" name="lname" placeholder="Correo"><br />
                         <input type="text" id="lname" name="lname" placeholder="Numero de Telefono"><br />
                         <label for="lname">Descripción:</label><br>
-                        <textarea class="entradas" name="message" rows="6" cols="47">
-
-                </textarea>
+                        <textarea class="entradas" name="message" style="resize:none;width:90%;height:20vh" >
+                        </textarea>
                         <br />
-                        <input class="check-form" type="checkbox" id="tratamiento" name="tratamiento" value="">
-                        <label for="tratamiento"> Acepta política de tratamiento de información</label><br>
-                        <label>Acepto política tratamiento de datos </label><br>
+                        <label for="tratamiento"> <input class="check-form" type="checkbox" id="tratamiento" name="tratamiento" value="">
+                        Acepta política de tratamiento de información</label>
+                        <label id="letrapeque">Acepto política tratamiento de datos </label><br>
                         <input class="form-button" type="submit" value="Enviar información">
                     </form>
                 </div>
@@ -1222,19 +1256,19 @@
                 autoplay: true,
                 responsive: [
                     {
-                        breakpoint: 1350,
+                        breakpoint: 1600,
                         settings: {
                             slidesToShow: 3,
                         }
                     },
                     {
-                        breakpoint: 1050,
+                        breakpoint: 1260,
                         settings: {
                             slidesToShow: 2,
                         }
                     },
                     {
-                        breakpoint: 750,
+                        breakpoint: 1000,
                         settings: {
                             slidesToShow: 1,
                         }
@@ -1299,6 +1333,39 @@
             }); // end DOM ready
         })(jQuery); // end jQuery
     </script>
+    @*<script>
+        // Get the modal
+        const modal1 = document.querySelector("#ventana1");
+        console.log(modal1);
+        // Get the button that opens the modal
+        const btn1 = document.querySelectorAll(".btn1");
+
+        // Get the <span> element that closes the modal
+        const closeModal1 = document.getElementsByClassName("cerrar")[0];
+
+        for (let i = 0; i < btn1.length; i++) {
+            btn1[i].addEventListener("click", function () {
+                modal1.style.display = "block";
+            });
+        }
+
+        // When the user clicks the button, open the modal
+        btn1.onclick = function () {
+            modal1.style.display = "block";
+        };
+
+        // When the user clicks on <span> (x), close the modal
+        closeModal1.onclick = function () {
+            modal1.style.display = "none";
+        };
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal1.style.display = "none";
+            }
+        };
+    </script>*@
 </body>
 </html>
 
