Depuración del Codigo

--- a/Ingenio.PortalWebExterno/Content/sass/abstracts/_functions.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/abstracts/_functions.scss
@@ -51,6 +51,11 @@
 }
 /*Fin de Funcion de subrayar*/
 
+@mixin uderline(){
+
+}
+
+
 @mixin obj-center() {
     display: flex;
     align-items: center;
