--- a/Ingenio.PortalWebExterno/Views/Home/Creditos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Creditos.cshtml
@@ -157,6 +157,20 @@
     </div>
 </section>
 
+<section id="c_Credito">
+    <div class="one card_Credito">
+        <div class="contenido_Credito">
+            
+        </div>
+    </div>
+    <div class="two card_Credito">Two</div>
+    <div class="three card_Credito">Three</div>
+    <div class="four card_Credito">Four</div>
+    <div class="five card_Credito">Five</div>
+    <div class="six card_Credito">Six</div>
+</section>
+
+
 <!--contenido-->
 <div id="imagenes" class="row" style="background-color:#ffffff;">    
     <div class="container">
