--- a/Ingenio.PortalWebExterno/Content/sass/components/_navbar.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/components/_navbar.scss
@@ -1,10 +1,14 @@
 ﻿@import '../abstracts/_colors.scss';
+@import '../abstracts/_functions.scss';
 
 #top {
-
     background-color: $primary-color;
     color: #eeeeee;
     padding: 10px 0;
+
+    /*.container2{
+        max-width:1400px;
+    }*/
 
     .login {
         float: right;
@@ -33,6 +37,7 @@
         flex-direction: row;
 
         a {
+            @include obj-center();
             font-size: 1em;
             color: white;
             width: 0.5rem;
@@ -40,13 +45,9 @@
             /*border: 3px solid #FB7601;*/
             border-radius: 50%;
             padding: 15px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             flex-direction: row;
 
             /* Cambio de colores de redes Sociales*/
-            
             &.facebook {
                 background-color: #4460ae;
             }
