--- a/Ingenio.PortalWebExterno/Content/sass/prueba.css
+++ b/Ingenio.PortalWebExterno/Content/sass/prueba.css
@@ -50,10 +50,59 @@
   display: none; }
 
 /*Fin de Zonas que ocultar*/
+/* FUNCION DE GIRAR*/
+.girar {
+  display: inline-block;
+  border-radius: 10px;
+  width: 100px;
+  height: 100px; }
+
+.girar:hover {
+  animation-name: rotate;
+  animation-duration: 0.8s;
+  animation-iteration-count: 1; }
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0); }
+  100% {
+    transform: rotate(360deg); } }
+
+/* Fin funcion de girar*/
+/*Inicio de Funcion de subrayar*/
+.underline {
+  /*color:red;*/
+  display: inline-block;
+  position: relative; }
+
+.underline:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background: rgba(224, 85, 20, 0.75);
+  /*background:blue;*/
+  transform: scale(0);
+  transform-origin: bottom right;
+  transition: transform 0.6s ease-out; }
+
+.underline:hover:after {
+  transform: scale(1);
+  transform-origin: bottom left; }
+
+/*Fin de Funcion de subrayar*/
 .big-container {
   max-width: 1200px;
   margin-right: auto;
   margin-left: auto; }
+
+.contenedor {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; }
 
 content-video > myButtons:hover {
   color: white; }
@@ -61,6 +110,63 @@ content-video > myButtons:hover {
 @media screen and (max-width: 899px) {
   .centerSpan {
     margin: 0 auto; } }
+
+/* FUNCION DE GIRAR*/
+.girar {
+  display: inline-block;
+  border-radius: 10px;
+  width: 100px;
+  height: 100px; }
+
+.girar:hover {
+  animation-name: rotate;
+  animation-duration: 0.8s;
+  animation-iteration-count: 1; }
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0); }
+  100% {
+    transform: rotate(360deg); } }
+
+/* Fin funcion de girar*/
+/*Inicio de Funcion de subrayar*/
+.underline {
+  /*color:red;*/
+  display: inline-block;
+  position: relative; }
+
+.underline:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background: rgba(224, 85, 20, 0.75);
+  /*background:blue;*/
+  transform: scale(0);
+  transform-origin: bottom right;
+  transition: transform 0.6s ease-out; }
+
+.underline:hover:after {
+  transform: scale(1);
+  transform-origin: bottom left; }
+
+/*Fin de Funcion de subrayar*/
+#c_Credito {
+  height: 400px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap; }
+
+.card_Credito {
+  width: 320px;
+  height: 200px;
+  background: red;
+  margin: 20px; }
 
 .myButtons {
   padding: 10px 50px;
@@ -75,10 +181,82 @@ content-video > myButtons:hover {
   text-decoration: none;
   text-align: center; }
 
+.myButtons:hover {
+  color: #ec1c24; }
+
+.slick-prev:before {
+  /*content: "<";*/
+  color: rgba(224, 85, 20, 0.75);
+  font-size: 30px; }
+
+.slick-next:before {
+  /*content: ">";*/
+  color: rgba(224, 85, 20, 0.75);
+  font-size: 30px; }
+
+.slick-dots {
+  position: relative;
+  color: #ec1c24 !important; }
+  .slick-dots li {
+    margin: 0 20px 0 0; }
+    .slick-dots li button {
+      background: rgba(224, 85, 20, 0.75);
+      text-indent: -9999px;
+      overflow: hidden;
+      border-radius: 20%;
+      width: 3vh;
+      height: 1vh; }
+
+/* FUNCION DE GIRAR*/
+.girar {
+  display: inline-block;
+  border-radius: 10px;
+  width: 100px;
+  height: 100px; }
+
+.girar:hover {
+  animation-name: rotate;
+  animation-duration: 0.8s;
+  animation-iteration-count: 1; }
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0); }
+  100% {
+    transform: rotate(360deg); } }
+
+/* Fin funcion de girar*/
+/*Inicio de Funcion de subrayar*/
+.underline {
+  /*color:red;*/
+  display: inline-block;
+  position: relative; }
+
+.underline:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background: rgba(224, 85, 20, 0.75);
+  /*background:blue;*/
+  transform: scale(0);
+  transform-origin: bottom right;
+  transition: transform 0.6s ease-out; }
+
+.underline:hover:after {
+  transform: scale(1);
+  transform-origin: bottom left; }
+
+/*Fin de Funcion de subrayar*/
 #top {
   background-color: rgba(224, 85, 20, 0.75);
   color: #eeeeee;
-  padding: 10px 0; }
+  padding: 10px 0;
+  /*.container2{
+        max-width:1400px;
+    }*/ }
   #top .login {
     float: right; }
     #top .login a {
@@ -99,6 +277,9 @@ content-video > myButtons:hover {
     display: flex;
     flex-direction: row; }
     #top .social a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       font-size: 1em;
       color: white;
       width: 0.5rem;
@@ -106,9 +287,6 @@ content-video > myButtons:hover {
       /*border: 3px solid #FB7601;*/
       border-radius: 50%;
       padding: 15px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       flex-direction: row;
       /* Cambio de colores de redes Sociales*/ }
       #top .social a.facebook {
