--- a/Ingenio.PortalWebExterno/Content/sass/prueba.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/prueba.scss
@@ -2,6 +2,7 @@
 @import 'abstracts/fonts.scss';
 @import 'abstracts/functions.scss';
 @import 'pages/home.scss';
+@import 'pages/_credito.scss';
 @import 'components/button.scss';
 @import 'components/_navbar.scss';
 
