--- a/Ingenio.PortalWebExterno/Content/style.red.css
+++ b/Ingenio.PortalWebExterno/Content/style.red.css
@@ -246,12 +246,6 @@
 #sliderVideo {
   align-items: center;
 }
-.contenedor {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
 .contenedor > .botones > button {
   margin: 10px 40px;
 }
@@ -286,8 +280,6 @@
   align-items: center;
   justify-content: center;
 }
-
-
 
 .tarjetas-contenedor {
   display: flex;
@@ -341,8 +333,6 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  /*align-items: center;*/
-  /*justify-content: center;*/
 }
 
 #sliderVideo {
@@ -449,9 +439,7 @@
     }
 }
 
-/* FIN de Cambios Actualizados*/
-
-
+/* Fin de Cambios Actualizados*/
 
 /* Codigo ANTERIOR*/
 .clearfix:before,
