--- a/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
@@ -1250,17 +1250,17 @@
         });
         $(document).ready(function () {
             $('.my-slider').slick({
-                slidesToShow: 4,
-                slidesToScroll: 1,
+                // Propiedades del Slider
+                slidesToShow: 3,
+                slidesToScroll: 4,
                 arrows: true,
                 dots: true,
-                speed: 300,
+                speed: 500,
                 infinite: true,
                 autoplaySpeed: 5000,
-                autoplay: true,
                 responsive: [
                     {
-                        breakpoint: 1600,
+                        breakpoint: 1400,
                         settings: {
                             slidesToShow: 3,
                         }
