--- a/Ingenio.PortalWebExterno/Views/Home/Creditos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Creditos.cshtml
@@ -91,7 +91,7 @@
 
     .top {
         margin-bottom: 20px;
-    }   
+    }
 
     .row {
         margin-right: 5px;
@@ -146,7 +146,7 @@
 
 
 <!--seccion de nota-->
-<section id="textura">
+<section id="textura" style="display:none">
     <div class="container">
 
         <p class="text-justify" style="color:#eeeeee; font-size:20px;">
@@ -157,22 +157,59 @@
     </div>
 </section>
 
-<section id="c_Credito">
-    <div class="one card_Credito">
-        <div class="contenido_Credito">
-            
-        </div>
+<section id="c_Credito" style="display:none;">
+    <div class="card_Credito">
+        <img src="~/img/LOGOS_CREDITO/EDUCATIVO3.jpg" />
+        <p>
+            Hola
+            <button class="myButtons"> Conoce mas</button>
+        </p>
     </div>
-    <div class="two card_Credito">Two</div>
-    <div class="three card_Credito">Three</div>
-    <div class="four card_Credito">Four</div>
-    <div class="five card_Credito">Five</div>
-    <div class="six card_Credito">Six</div>
+    <div class="card_Credito">
+        <img src="~/img/LOGOS_CREDITO/LIBRANZA1.jpg" />
+        <p>
+            Hola
+            <button class="myButtons"> Conoce mas</button>
+        </p>
+    </div>
+    <div class="card_Credito">
+        <img src="~/img/LOGOS_CREDITO/EDUCATIVO3.jpg" />
+        <p>
+            Hola
+            <button class="myButtons"> Conoce mas</button>
+        </p>
+    </div>
+    <div class="card_Credito">
+        <img src="~/img/LOGOS_CREDITO/EDUCATIVO3.jpg" />
+        <p>
+            Hola
+            <button class="myButtons"> Conoce mas</button>
+        </p>
+    </div>
 </section>
 
+<!-- Nuevo Diseño  -->
+
+<section class="page__Credito">
+    <div class="componente__Credito gBoxShadow">
+        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/educativo3.jpg">
+        <h2>Credito Educativo</h2>
+        <p>
+            El <strong>CRÉDITO EDUCATIVO</strong> dónde los <strong>asociados</strong> y sus <strong>hijos</strong> podrán lograr el sueño de realizar sus <strong>estudios.</strong>
+        </p>
+        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+    </div>
+</section>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 
 <!--contenido-->
-<div id="imagenes" class="row" style="background-color:#ffffff;">    
+<div id="imagenes" class="row" style="background-color:#ffffff;">
     <div class="container">
         <div class="row">
             <!--EMPIEZA CREDITO EDUCATIVO-->
@@ -343,25 +380,25 @@
             </div>
             <!--FINALIZA COFINAGRO-->
         </div>
-    </div>    
+    </div>
 </div>
 <div class="container-fluid" style="margin-bottom: -6px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,64L80,101.3C160,139,320,213,480,213.3C640,213,800,139,960,96C1120,53,1280,43,1360,37.3L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
 </div>
 
-    <!--CODIGO PARA SIMULADORES DE CREDITO--> 
-    @* <div class="parallaxbox1" id="pb1" style="background-image:url(/img/ahorro1-2.jpg);">
-        <!--boton simulador-->
-        <div class="container" style="padding-top:1em; ">
-            <div class="well" style="max-width:400px; margin:0 auto 10px;">*@
-    @*<button id="miBoto" style="background-color:#da4d4d; background-size:20px;" type="button" class="btn btn-primary btn-lg btn-block"><a style="color:white" href="~/SimuladorCre/Edit">Simuladores</a></button>*@
-    @*<a href="~/SimuladorCre/Edit">
-            <img src="~/img/simulador.png" alt="Simulador de credito" style="width:350px;height:42px;border:0;">
-        </a>
-                </div>
+<!--CODIGO PARA SIMULADORES DE CREDITO-->
+@* <div class="parallaxbox1" id="pb1" style="background-image:url(/img/ahorro1-2.jpg);">
+    <!--boton simulador-->
+    <div class="container" style="padding-top:1em; ">
+        <div class="well" style="max-width:400px; margin:0 auto 10px;">*@
+@*<button id="miBoto" style="background-color:#da4d4d; background-size:20px;" type="button" class="btn btn-primary btn-lg btn-block"><a style="color:white" href="~/SimuladorCre/Edit">Simuladores</a></button>*@
+@*<a href="~/SimuladorCre/Edit">
+        <img src="~/img/simulador.png" alt="Simulador de credito" style="width:350px;height:42px;border:0;">
+    </a>
             </div>
-        </div>*@
-    <!-- scrip para parallax-->
+        </div>
+    </div>*@
+<!-- scrip para parallax-->
 
 
 <script type="text/javascript">
