--- a/Ingenio.PortalWebExterno/Content/sass/abstracts/_colors.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/abstracts/_colors.scss
@@ -1,4 +1,5 @@
 ﻿$primary-color: rgba(224, 85, 20, 0.75);
-$secondary-color: rgba(236, 28, 36, 255);
+$secondary-color: rgba(236, 28, 36, 0.75);
+$secondary-color-sombra: rgba(236, 28, 36, 0.5);
 $sombras-color: rgba(0, 0, 0, 0.5);
 $light-color: rgba(255, 255, 255, 1);
