--- a/Ingenio.PortalWebExterno/Content/sass/components/_button.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/components/_button.scss
@@ -32,20 +32,28 @@
 }
 
 .slick-dots {
-    position:relative;
+    position: relative;
     color: $secondary-color !important;
 
-    li{
+    li {
+        margin: 0 20px 0 0;
 
-        margin:0 20px 0 0;
+        button {
+            background: $primary-color;
+            text-indent: -9999px;
+            overflow: hidden;
+            border-radius: 20%;
+            width: 3vh;
+            height: 1vh;
+            animation: all 1s case ease-out;
 
-        button{
-        background:$primary-color;
-        text-indent: -9999px;
-        overflow: hidden;
-        border-radius:20%;
-        width:3vh;
-        height:1vh;
+            &:hover, &:focus {
+                background: $secondary-color
+            }
         }
-    } 
+
+    }
+}
+.my-slider .slick-list {
+    margin: 0px 10px;
 }
