--- a/Ingenio.PortalWebExterno/Content/sass/components/_navbar.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/components/_navbar.scss
@@ -6,6 +6,11 @@
     color: #eeeeee;
     padding: 10px 0;
 
+    .container2 {
+        @media only screen and (min-width: 1300px) {
+            margin: 0 50px 0 50px;
+        }
+    }
     /*.container2{
         max-width:1400px;
     }*/
@@ -46,7 +51,6 @@
             border-radius: 50%;
             padding: 15px;
             flex-direction: row;
-
             /* Cambio de colores de redes Sociales*/
             &.facebook {
                 background-color: #4460ae;
@@ -73,5 +77,12 @@
                 background-image: linear-gradient( to right, rgb(240, 148, 51) 10%, rgb(230, 104, 60) 20%, rgb(220, 39, 67) 60%, rgb(220, 39, 67) 80%, rgb(188, 24, 136) 100% );
             }
         }
+    }
+}
+#navbar {
+    padding: 10px;
+
+    @media only screen and (min-width: 1300px) {
+        margin: 0 50px 0 50px;
     }
 }
