--- a/Ingenio.PortalWebExterno/Content/sass/pages/_home.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_home.scss
@@ -8,7 +8,7 @@
 /*Fin de Zonas que ocultar*/
 
 @import '../abstracts/_functions.scss';
-
+@import '../abstracts/_colors.scss';
 .big-container {
     max-width: 1200px;
     margin-right: auto;
@@ -20,6 +20,13 @@
 }
 
 
+#Video_Slider {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 15px 30px -20px rgba(0, 0, 0, 0.5)
+}
+
 content-video > myButtons:hover{
     color:white;
 }
@@ -30,4 +37,62 @@ content-video > myButtons:hover{
         margin: 0 auto;
     }
 }
-   
+
+
+
+/* Contenido */
+
+.tarjetas-Centradas {
+    
+    .myButtons{
+        margin:20px auto;
+        transition: all 0.2s ease-in-out;
+
+
+        &:hover{
+            background: $secondary-color;
+            color:white;
+        }
+    }
+    i {
+        transition: all 0.2s ease-in-out;
+    }
+}
+    .animacion_arriba{
+        &:hover > i{
+            animation: wobble_vertical 1s ease-in-out;
+            animation-iteration-count: 1;
+        }
+        &:focus > i{
+            animation: wobble_vertical 1s ease-in-out;
+            animation-iteration-count: 1;
+        }
+
+    }
+
+
+    @keyframes wobble_vertical {
+        0% {
+            transform: translateY(5px);
+        }
+
+        20% {
+            transform: translateY(-5px)
+        }
+
+        60% {
+            transform: translateY(2px)
+        }
+
+        80% {
+            transform: translateY(-2px)
+        }
+
+        100% {
+            transform: translateY(0);
+        }
+    }
+
+
+
+
