--- a/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
@@ -519,12 +519,12 @@
                             <p>Convenios y promociones</p>
                             <p class="text-prueba"> Lorem Ipsum is simply dummy<br /> text of the printing and typesetting industry. </p>
                         </div>
-                        <div class="tarjetas-Centradas">
+                        <div class="tarjetas-Centradas underline2">
                             <div class="icentrado"><i aria-hidden="true" class="fas fa-user-lock"></i></div>
                             <p>Protección al ahorro</p>
                             <p class="text-prueba"> Lorem Ipsum is simply dummy<br /> text of the printing and typesetting industry. </p>
                         </div>
-                        <div class="tarjetas-Centradas">
+                        <div class="tarjetas-Centradas underline2">
                             <div class="icentrado"><i aria-hidden="true" class="fas fa-user-plus"></i></div>
                             <p>Ayuda funeraria</p>
                             <p class="text-prueba"> Lorem Ipsum is simply dummy<br /> text of the printing and typesetting industry. </p>
@@ -602,6 +602,7 @@
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         </p>
+                        <button class="myButtons">Ingresar</button>
                     </div>
                     <div class="tarjetas-Centradas gBoxShadow animacion_arriba">
                         <i aria-hidden="true" class="fas fa-check"></i>
@@ -609,21 +610,23 @@
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         </p>
+                        <button class="myButtons">Ingresar</button>
                     </div>
                     <div class="tarjetas-Centradas gBoxShadow animacion_arriba">
-                        <i aria-hidden="true" class="fas fa-calendar-alt"></i>
+                        <i aria-hidden="true" class="fas fa-solid fa-calculator"></i>
                         <h3>Simuladores</h3>
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-
                         </p>
+                        <button class="myButtons">Ingresar</button>
                     </div>
                     <div class="tarjetas-Centradas gBoxShadow animacion_arriba">
-                        <i aria-hidden="true" class="fas fa-calendar-alt"></i>
+                        <i aria-hidden="true" class="fas fa-solid fa-desktop"></i>
                         <h3>Virtual</h3>
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         </p>
+                        <button class="myButtons">Ingresar</button>
                     </div>
                 </section>
                 <!-- Fin: Tarjetas Contenedoras -->
@@ -1252,9 +1255,10 @@
             $('.my-slider').slick({
                 // Propiedades del Slider
                 slidesToShow: 3,
-                slidesToScroll: 4,
+                slidesToScroll: 1,
                 arrows: true,
-                dots: true,
+                centermode: true,
+                //dots: true,
                 speed: 500,
                 infinite: true,
                 autoplaySpeed: 5000,
@@ -1266,17 +1270,17 @@
                         }
                     },
                     {
-                        breakpoint: 1260,
+                        breakpoint: 900,
                         settings: {
                             slidesToShow: 2,
                         }
                     },
                     {
-                        breakpoint: 1000,
+                        breakpoint: 750,
                         settings: {
                             slidesToShow: 1,
                         }
-                    }
+                    },
                 ]
             });
         });
