--- a/Ingenio.PortalWebExterno/Views/Shared/Navbar.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Shared/Navbar.cshtml
@@ -60,7 +60,7 @@
 
     <!-- *** NAVBAR ***-->
 
-    <div class="navbar-affixed-top" data-spy="affix" data-offset-top="200">
+    <div class="navbar-affixed-top opciones_2" data-spy="affix" data-offset-top="200">
 
         @*<div class="navbar navbar-default yamm" role="navigation" id="navbar">*@
         <div class="navbar navbar-default yamm" role="navigation" id="navbar">
